DOC-2284: Change text in the table header and premium plugin

--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -81,7 +81,7 @@ The below table summaries how versions are handled in {pluginname}:
 
 [cols="1,1,1,3", options="header"]
 |===
-|Initial Version |Current Version |Has Saved Versions |Expectation
+|Has Initial Version |Current Version |Has Saved Versions |Expectation
 |No |N/A |No |No versions are shown
 |No |N/A |Yes |Only the saved versions are shown
 |Yes |Same |No |Only the current version is shown
