--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -88,7 +88,7 @@ For more information, visit the updated xref:autocompleter.adoc[Autocompleter] d
 
 === Changed
 
-==== Removed `InsertOrderedList` and `InsertUnorderedList` commands from the core.
+==== Removed `InsertOrderedList` and `InsertUnorderedList` commands from {productname} core.
 
 Previously, native list commands were executable through various text patterns, leading to undefined browser behavior due to the embedded list code.
 
