--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -84,7 +84,7 @@ For more information, visit the updated xref:autocompleter.adoc[Autocompleter] d
 
 
 [[commands-and-queries]]
-== Commands and queries
+== Commands and Queries
 
 === Changed
 
