--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -185,7 +185,7 @@ In {productname} 7.0 the below plugin has been removed.
 
 The open-source `Template` plugin and associated config options have been removed in {productname} 7.0.
 
-Customers using the `template` plugin need to migrate to the premium `advtemplate` which contains all the functionality except some esoteric options that was created very long ago. Instead of simply porting over these options, we will listen to customer feedback and quickly add the ones customer’s are relying on. 
+Customers using the `template` plugin need to migrate to the premium `advtemplate` which contains all the functionality except some esoteric options.
 
 This plugin has been replaced with the **Advanced Template** plugin, see: xref:advanced-templates.adoc[Advanced Template] for more details.
 
