--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -30,9 +30,9 @@ The key components are:
 * `Close`: Exit the view.
 
 2. The readonly diff view presents the changes between the selected version and its immediate predecessor, clearly highlighting for easy recognition. The changes are also color-coded for clarity:
-* Red: Removed content
-* Green: New content
-* Yellow: Content being modified. Modifications to HTML content implies attribute or format changes (bold, italic, etc)
+* Red: Removed content.
+* Green: New content.
+* Yellow: Content being modified. Modifications to HTML content implies attributes or formatting (e.g. bold, italic, etc.).
 3. The revisions sidebar displays all available document versions. When a new version is selected, the diff view is updated accordingly.
 
 [NOTE]
